<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact_person"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Persona de contacto"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/company_contact_number"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Teléfono de contacto"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/company_name"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Nombre de la empresa / propietario"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:text="@string/title2"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/type_of_load"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Tipo de carga"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Peso de la carga"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/volume_of_load"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Volumen de la carga (metros cubicos)"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/title3"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/origin_City"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Ciudad de origen"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/origin_hour"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Hora de carga / recogida"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/origin_description"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Dirección para recoger la carga"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:text="@string/title4"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/destiny_City"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Ciudad de destino"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/destiny_hour"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Hora de descargue "
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/destiny_description"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Dirección para descargar la carga"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:text="@string/title5"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/aditional_information"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="690dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Equipamiento Especial Requerido (p. ej., refrigeración, contenedor específico)"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="730dp"
        android:text="@string/send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
